                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2014-12-30
 * wing.js update_field() now passes the data result to the callback.
 * wing.js attach_autosave() now allows a third parameter to be a callback that will be executed upon success.

2014-09-21
 * Now have a default Result Set object which is required for Wing to operate. This is a backward incompatible change, but is easily fixed. Simply edit YourApp::DB and add this line inside load_namespaces()

  __PACKAGE__->load_namespaces(
      default_resultset_class => '+Wing::DB::ResultSet',
  );

2014-09-20
 * Switched to PNotify 2.0. This is backward incompatible with PNotify 1.0.

2014-05-27
 * Add error handling to SendTemplateEmail Wingman job.

2014-05-06
 * Add a file to hold a master before_template_render hook for all of wing.  This hook should always be the last hook processed, because it will call describe on the current_user object passed in.

2014-04-2
 * Automatically set the database name in the config file, based on the project name.

2014-03-17
 * Update the template class templates for Bootstrap3

2014-02-27
 * You can now add extra_processing to the Wing::Rest's generate_delete.

2014-02-27
 * You can now make a class viewable using the PrivilegeControlled role.

2013-10-30
 * Changed session to compare the password hash stored in the session with the one stored in the database. This way all existing sessions will get logged out if the user changes their password. 

2013-09-25
 * Daemonized wingman.pl. You now need the Daemon::Control perl module. You can also add a "wingman/pid_file_path" directive to your config file if you want to control where the pid is stored. 